[tool.poetry]
name = "task-scheduler"
version = "0.1.0"
description = "Asynchronous task scheduler on a remote Linux machine"
authors = ["Sefi Antebi <sefi.antebi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"
psycopg2-binary = "^2.9.10"
paramiko = "^3.5.0"
asyncio = "^3.4.3"
uuid = "^1.30"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
